2023-07-20T00:45:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5605550628 # 1022
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: last 14d: unq all: 17 4721
* notice: prev accum: outdated-unq outdated-all / unq all: 1519 140030 / 1586 145126
* notice: next accum: outdated-unq outdated-all / unq all: 1534 140472 / 1586 145222
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -1 -29 / +3 +298 -0 -0 / 3 298
* notice: removed / changed dates: [2023-07-05] / [2023-07-06 2023-07-19]

2023-07-19T16:09:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5601505343 # 1021
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-19
* notice: last 14d: unq all: 29 4771
* notice: prev accum: outdated-unq outdated-all / unq all: 1519 140030 / 1586 145034
* notice: next accum: outdated-unq outdated-all / unq all: 1519 140030 / 1586 145126
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -1 -138 / +3 +202 -0 -0 / 3 202
* notice: removed / changed dates: [] / [2023-07-05 2023-07-19]

2023-07-19T08:10:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5596636261 # 1020
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-19
* notice: last 14d: unq all: 29 4817
* notice: prev accum: outdated-unq outdated-all / unq all: 1519 140030 / 1584 144931
* notice: next accum: outdated-unq outdated-all / unq all: 1519 140030 / 1586 145034
* notice: prev exec diff / last date diff / accum: unq all: +2 +103 -0 -112 / +3 +110 -0 -0 / 3 110
* notice: removed / changed dates: [] / [2023-07-05 2023-07-19]

2023-07-19T01:22:58Z: