@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-20T00:45:43Z",
+  "timestamp" : "2023-07-20T08:10:27Z",
   "count_outdated" : 140472,
   "uniques_outdated" : 1534,
-  "count" : 145222,
-  "uniques" : 1586,
+  "count" : 145333,
+  "uniques" : 1588,
   "clones" : [
     {
       "timestamp": "2023-07-06T00:00:00Z",
-      "count": 380,
+      "count": 210,
       "count_minmax": [ 144, 409 ],
-      "count_decinc": [ 29, 409 ],
-      "uniques": 7,
-      "uniques_minmax": [ 7, 8 ],
-      "uniques_decinc": [ 1, 8 ]
+      "count_decinc": [ 199, 409 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 8 ],
+      "uniques_decinc": [ 5, 8 ]
     },
     {
       "timestamp": "2023-07-07T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-07-20T00:00:00Z",
+      "count": 111,
+      "count_minmax": [ 111, 111 ],
+      "count_decinc": [ 0, 111 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
