@@ -1,3 +1,12 @@
+2023-07-20T08:10:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5608510655 # 1023
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
+* notice: last 14d: unq all: 14 4662
+* notice: prev accum: outdated-unq outdated-all / unq all: 1534 140472 / 1586 145222
+* notice: next accum: outdated-unq outdated-all / unq all: 1534 140472 / 1588 145333
+* notice: prev exec diff / last date diff / accum: unq all: +2 +111 -4 -170 / +2 +111 -0 -0 / 2 111
+* notice: removed / changed dates: [] / [2023-07-06 2023-07-20]
+
 2023-07-20T00:45:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5605550628 # 1022
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
